--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,22 +1,39 @@
 name: Compile AHK v2 Script
-on: [push]
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
 jobs:
-  build:
+  compile:
     runs-on: windows-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: AHK v2 kompilieren
-        uses: CCCC-L/Action-Ahk2Exe@main
-        with:
-          in: AutoReSizer.ahk
-          out: AutoReSizer.exe
-          base: 64 # Wählt zwischen 32 oder 64 Bit
-
-      - name: EXE hochladen
+      - name: Download AutoHotkey v2
+        run: |
+          curl -L "https://github.com/AutoHotkey/AutoHotkey/releases/download/v2.0.11/AutoHotkey_2.0.11_setup.exe" -o "ahk-setup.exe"
+          Start-Process -Wait -FilePath ".\ahk-setup.exe" -ArgumentList "/S"
+          
+      - name: Compile AHK v2 Script
+        run: |
+          $compileCommand = "`"$env:ProgramFiles\AutoHotkey\Compiler\Ahk2Exe.exe`" /in `"AutoReSizer.ahk`" /out `"AutoReSizer.exe`" /bin `"$env:ProgramFiles\AutoHotkey\v2\AutoHotkey64.exe`""
+          Write-Host "Compiling with command: $compileCommand"
+          Invoke-Expression $compileCommand
+          
+      - name: Verify EXE exists
+        run: |
+          if (Test-Path "AutoReSizer.exe") {
+            Write-Host "✓ Compilation successful! File size: $((Get-Item 'AutoReSizer.exe').Length) bytes"
+          } else {
+            Write-Host "✗ Compilation failed!"
+            exit 1
+          }
+          
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: AutoReSizer
+          name: AutoReSizer-EXE
           path: AutoReSizer.exe
