--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,126 +1,64 @@
-name: Compile AHK v2
+name: Compile AHK v2 - Simple
 
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:  # Erlaubt manuelles Auslösen
+  workflow_dispatch:
 
 jobs:
   compile:
     runs-on: windows-latest
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Compile AHK v2 Script
-      shell: powershell
+    - uses: actions/checkout@v4
+    
+    - name: Download and Extract AHK v2
       run: |
-        # Debug: Zeige Verzeichnisinhalt
-        Write-Host "=== DEBUG: Repository Inhalt ==="
-        Get-ChildItem -Recurse | Select-Object Name, FullName | Format-Table -AutoSize
-        Write-Host "==============================="
+        # Lade AHK v2 ZIP herunter
+        curl -L https://github.com/AutoHotkey/AutoHotkey/releases/download/v2.0.11/AutoHotkey_2.0.11.zip -o ahk.zip
         
-        # Quellscript prüfen
-        $sourceFile = "AutoReSizer.ahk"
-        if (-not (Test-Path $sourceFile)) {
-            Write-Host "❌ ERROR: $sourceFile nicht gefunden!" -ForegroundColor Red
-            Write-Host "Suche nach AHK Dateien..." -ForegroundColor Yellow
-            Get-ChildItem -Recurse -Filter *.ahk | Select-Object FullName
-            exit 1
-        }
+        # Entpacke
+        7z x ahk.zip -oahk
         
-        Write-Host "✅ $sourceFile gefunden" -ForegroundColor Green
+        # Zeige Inhalt
+        dir ahk /s /b
         
-        # 1. AutoHotkey v2 portable Version herunterladen
-        Write-Host "`n📥 Lade AutoHotkey v2 herunter..." -ForegroundColor Cyan
-        $ahkUrl = "https://github.com/AutoHotkey/AutoHotkey/releases/download/v2.0.11/AutoHotkey_2.0.11.zip"
-        $downloadPath = "$env:TEMP\ahk2.zip"
-        $extractPath = "$env:TEMP\ahk2"
+    - name: Find Compiler Files
+      run: |
+        # Suche die Dateien
+        for /r ahk %%i in (Ahk2Exe.exe) do set AHK2EXE=%%i
+        for /r ahk %%i in (AutoHotkey64.exe) do set AHK64=%%i
         
-        # Herunterladen
-        Invoke-WebRequest -Uri $ahkUrl -OutFile $downloadPath -UseBasicParsing
+        echo AHK2EXE=%AHK2EXE%
+        echo AHK64=%AHK64%
         
-        # Entpacken
-        if (Test-Path $extractPath) { Remove-Item $extractPath -Recurse -Force }
-        Expand-Archive -Path $downloadPath -DestinationPath $extractPath -Force
+        # Prüfe ob Dateien existieren
+        if not exist "%AHK2EXE%" (
+          echo ERROR: Ahk2Exe.exe not found!
+          exit /b 1
+        )
         
-        # 2. Ahk2Exe und AutoHotkey64.exe finden
-        Write-Host "`n🔍 Suche Compiler..." -ForegroundColor Cyan
-        $ahk2exe = Get-ChildItem -Path $extractPath -Recurse -Filter "Ahk2Exe.exe" | Select-Object -First 1 -ExpandProperty FullName
-        $ahk64exe = Get-ChildItem -Path $extractPath -Recurse -Filter "AutoHotkey64.exe" | Select-Object -First 1 -ExpandProperty FullName
+        if not exist "%AHK64%" (
+          echo ERROR: AutoHotkey64.exe not found!
+          exit /b 1
+        )
         
-        if (-not $ahk2exe -or -not $ahk64exe) {
-            Write-Host "❌ Compiler oder Base-File nicht gefunden!" -ForegroundColor Red
-            Write-Host "Inhalt von $extractPath :"
-            Get-ChildItem -Path $extractPath -Recurse | Select-Object Name, FullName | Format-Table -AutoSize
-            exit 1
-        }
+    - name: Compile Script
+      run: |
+        # Kompiliere
+        "%AHK2EXE%" /in "AutoReSizer.ahk" /out "AutoReSizer.exe" /bin "%AHK64%"
         
-        Write-Host "✅ Ahk2Exe gefunden: $ahk2exe" -ForegroundColor Green
-        Write-Host "✅ AutoHotkey64.exe gefunden: $ahk64exe" -ForegroundColor Green
+        # Prüfe Ergebnis
+        if exist "AutoReSizer.exe" (
+          echo SUCCESS: AutoReSizer.exe created!
+          dir AutoReSizer.exe
+        ) else (
+          echo ERROR: Compilation failed!
+          exit /b 1
+        )
         
-        # 3. Kompilierung durchführen
-        Write-Host "`n🔨 Kompiliere $sourceFile ..." -ForegroundColor Cyan
-        $outputFile = "AutoReSizer.exe"
-        
-        # Kommando ausführen
-        $compileCommand = "`"$ahk2exe`" /in `"$(Get-Item $sourceFile).FullName`" /out `"$outputFile`" /bin `"$ahk64exe`""
-        Write-Host "Ausführe: $compileCommand"
-        
-        # Kompilieren
-        $process = Start-Process -FilePath $ahk2exe -ArgumentList "/in `"$(Get-Item $sourceFile).FullName`" /out `"$outputFile`" /bin `"$ahk64exe`"" -Wait -NoNewWindow -PassThru
-        
-        if ($process.ExitCode -ne 0) {
-            Write-Host "⚠️ Kompilierung gab Exit-Code $($process.ExitCode) zurück" -ForegroundColor Yellow
-        }
-        
-        # 4. Ergebnis prüfen
-        Write-Host "`n📊 Prüfe Ergebnis..." -ForegroundColor Cyan
-        if (Test-Path $outputFile) {
-            $fileSize = (Get-Item $outputFile).Length
-            $fileInfo = Get-Item $outputFile
-            Write-Host "✅ SUCCESS: $outputFile erstellt!" -ForegroundColor Green
-            Write-Host "   Größe: $fileSize Bytes" -ForegroundColor White
-            Write-Host "   Pfad: $($fileInfo.FullName)" -ForegroundColor White
-            Write-Host "   Erstellt: $($fileInfo.CreationTime)" -ForegroundColor White
-        } else {
-            Write-Host "❌ FEHLER: $outputFile wurde nicht erstellt!" -ForegroundColor Red
-            
-            # Alternativen versuchen
-            Write-Host "`n🔄 Versuche alternative Methode..." -ForegroundColor Yellow
-            
-            # Methode 2: Direkt mit PowerShell
-            $sourceContent = Get-Content $sourceFile -Raw
-            if ($sourceContent -match "^#Requires AutoHotkey v2") {
-                Write-Host "Script ist AHK v2" -ForegroundColor Green
-            }
-            
-            # Methode 3: Manuelle Kompilierung simulieren
-            Write-Host "Kopiere AutoHotkey64.exe als Fallback..."
-            Copy-Item $ahk64exe -Destination "AutoReSizer.exe" -Force
-            
-            if (Test-Path "AutoReSizer.exe") {
-                Write-Host "⚠️ Fallback-EXE erstellt (nicht kompiliert)" -ForegroundColor Yellow
-            } else {
-                exit 1
-            }
-        }
-
-    - name: Upload executable
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: AutoReSizer-Executable
+        name: AutoReSizer
         path: AutoReSizer.exe
-        retention-days: 7
-        
-    - name: Create Release (optional)
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: AutoReSizer.exe
-        generate_release_notes: true
